# laika

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
laika/cmd/: laika.py
laika/cmd/style/: laika.tcss
laika/cmd/widgets/: __init__.py  file_card.py  search_bar.py
laika/core/: core.py
laika/core/data/: sqlite3.db
laika/core/models/: __init__.py  file.py
laika/core/services/: __init__.py  database.py  event_handler.py  vectorizer.py
laika/core/utils/: __init__.py  embedder.py
services/: __init__.py  database.py  event_handler.py  vectorizer.py
services/models/: __init__.py  file.py
utils/: __init__.py  embedder.py  hasher.py
